--- a/application/admin/view/account/login.html
+++ b/application/admin/view/account/login.html
@@ -55,6 +55,12 @@
 layui.use(['layer'],function(){
     $ = layui.jquery;
     layer = layui.layer;
+    $('#username').focus();
+    $('input').keydown(function(e){
+        if(e.keyCode==13){
+            dologin();
+        }
+    })
 });
     function dologin() {
         var username = $.trim($('#username').val());
@@ -76,11 +82,13 @@ layui.use(['layer'],function(){
                 //var res = JSON.parse(res);
                 console.log(res)
                 if (res.code > 0) {
-                    layer.alert(res.msg)
+                    layer.alert(res.msg);
+                    window.location.href = '/admin';
                 } else {
                     layer.msg(res.msg);
                     setTimeout(() => {
-                        window.location.href = '/admin';
+                       
+                        window.location.href = '/admin/home';
                     }, 1000);
                 }
             },'json')
