--- a/application/admin/view/home/home.html
+++ b/application/admin/view/home/home.html
@@ -14,21 +14,24 @@
         float: right;
         margin-right: 15px;
     }
-    .menu{
-       color: black
+
+    .menu {
+        color: black
     }
-    .main{
-        position: absolute;
+
+    .main {
         border: 1px solid red;
-        top: 60px;
-        left: 200px;
+        width: 100%;
+        height: 100%;
+        float: right;
     }
 </style>
+
 <body>
     <div class="header">
         <ul class="layui-nav" style="background:#1E9FFF;">
             <li class="layui-nav-item">
-                <a href="">后台管理系统</a>
+                <span>后台管理系统</span>
             </li>
             <li class="layui-nav-item item-r">
                 <a href="">控制台<span class="layui-badge">9</span></a>
@@ -37,19 +40,19 @@
               <a href="">个人中心<span class=" layui-badge-dot"></span></a>
             </li>
             <li class="layui-nav-item item-r"">
-              <a href=""><img src="//t.cn/RCzsdCq" class="layui-nav-img">我</a>
+              <a href=""><img src="//t.cn/RCzsdCq" class="layui-nav-img">{$username}</a>
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;">修改信息</a></dd>
                     <dd><a href="javascript:;">安全管理</a></dd>
-                    <dd><a href="javascript:;">退了</a></dd>
+                    <dd><a href="/admin/home/quit">注销</a></dd>
                 </dl>
             </li>
         </ul>
     </div>
-    <div class="menu">
-        <ul class="layui-nav layui-nav-tree layui-inline layui-nav-side" style="margin-right: 10px;top:60px" >
-            <li class="layui-nav-item layui-nav-itemed nav-item">
-                <a href="javascript:;">默认展开</a>
+    <div class="menu" id="menu">
+        <ul class="layui-nav layui-nav-tree layui-inline layui-nav-side" style="margin-right: 10px;top:60px">
+            <li class="layui-nav-item nav-item">
+                <a href="javascript:;">管理员管理</a>
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;">选项一</a></dd>
                     <dd><a href="javascript:;">选项二</a></dd>
@@ -58,27 +61,36 @@
                 </dl>
             </li>
             <li class="layui-nav-item nav-item">
-                <a href="javascript:;">解决方案</a>
+                <a href="javascript:;">权限管理</a>
                 <dl class="layui-nav-child">
                     <dd><a href="">移动模块</a></dd>
                     <dd><a href="">后台模版</a></dd>
                     <dd><a href="">电商平台</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item nav-item"><a href="">云市场</a></li>
-            <li class="layui-nav-item nav-item"><a href="">社区</a></li>
+            <li class="layui-nav-item nav-item">
+                <a href="javascript:;">系统设置</a>
+                <dl class="layui-nav-child">
+                    <dd><a href="">移动模块</a></dd>
+                    <dd><a href="">后台模版</a></dd>
+                    <dd><a href="">电商平台</a></dd>
+                </dl>
+            </li>
+
         </ul>
     </div>
+
     <div class="main">
-        <iframe src="/admin/home/welcome" style="width:100%;height:100%;" frameborder="0" srcolling="0"></iframe>
+        <iframe src="/admin/home/welcome" style="width:100%; height:100%;" frameborder="0" srcolling="0"></iframe>
     </div>
 </body>
 <script>
-    layui.use('element', function () {
+    layui.use(['element'], function () {
+        $ = layui.jquery;
+        layer = layui.layer;
         var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
         //监听导航点击
         element.on('nav(demo)', function (elem) {
-            //console.log(elem)
             layer.msg(elem.text());
         });
     });
