--- a/application/admin/view/home/welcome.html
+++ b/application/admin/view/home/welcome.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome hello</h1>
+    <div class="content" style="width: 100%;height: 100%">
+        <p>欢迎使用后台管理系统</p> 
+    </div>
 </body>
 </html>
