--- a/application/admin/view/home/home.html
+++ b/application/admin/view/home/home.html
@@ -20,10 +20,10 @@
     }
 
     .main {
-        border: 1px solid red;
-        width: 100%;
-        height: 100%;
-        float: right;
+
+    }
+    .main iframe{
+   
     }
 </style>
 
@@ -54,10 +54,7 @@
             <li class="layui-nav-item nav-item">
                 <a href="javascript:;">管理员管理</a>
                 <dl class="layui-nav-child">
-                    <dd><a href="javascript:;">选项一</a></dd>
-                    <dd><a href="javascript:;">选项二</a></dd>
-                    <dd><a href="javascript:;">选项三</a></dd>
-                    <dd><a href="">跳转项</a></dd>
+                    <dd><a href="javascript:;" src="/admin/admins" onclick="set_admins()">管理员列表</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item nav-item">
@@ -81,7 +78,7 @@
     </div>
 
     <div class="main">
-        <iframe src="/admin/home/welcome" style="width:100%; height:100%;" frameborder="0" srcolling="0"></iframe>
+        <iframe src="/admin/home/welcome" style="width:100%; height:100%;" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"></iframe>
     </div>
 </body>
 <script>
@@ -94,6 +91,10 @@
             layer.msg(elem.text());
         });
     });
+    function set_admins(){
+        $('.main iframe').attr('src','/admin/admins');
+    }
+   
 </script>
 
 </html>
