--- a/application/admin/view/home/welcome.html
+++ b/application/admin/view/home/welcome.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="content" style="width: 100%;height: 100%">
+    <div class="content" style="width: 100%;height: 100%;text-align: center;">
         <p>欢迎使用后台管理系统</p> 
     </div>
 </body>
