--- a/application/admin/view/admins/admins.html
+++ b/application/admin/view/admins/admins.html
@@ -39,9 +39,6 @@
       <button class="layui-btn layui-btn-sm">
         <i class="layui-icon">&#xe640;</i>
       </button>
-      <button class="layui-btn layui-btn-sm">
-        <i class="layui-icon">&#xe602;</i>
-      </button>
     </div>
     <table class="layui-table">
       <colgroup>
@@ -72,7 +69,7 @@
 
 </body>
 <div id="admin-panel-add" style="width:400px;display: none">
-  <form class="layui-form" action="" style="margin-top:20px;">
+  <form class="layui-form" action="/admin/admins/add_admin" style="margin-top:20px;">
     <div class="layui-form-item">
       <label class="layui-form-label">管理员账号</label>
       <div class="layui-input-block">
@@ -80,46 +77,31 @@
       </div> 
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">管理员姓名</label>
+        <label class="layui-form-label">管理员密码</label>
         <div class="layui-input-block">
-          <input type="text" name="title" required  lay-verify="required" placeholder="请输入管理员账号" autocomplete="off" class="layui-input">
+          <input type="text" name="title" required  lay-verify="required" placeholder="请输入管理员密码" autocomplete="off" class="layui-input">
         </div> 
       </div>
-    
+      <div class="layui-form-item">
+          <label class="layui-form-label">权限</label>
+          <div class="layui-input-block">
+            <input type="radio" name="role" value="1" title="超级权限">
+            <input type="radio" name="role" value="0" title="一般权限" checked>
+          </div>
+        </div>
     <div class="layui-form-item">
-      <label class="layui-form-label">选择框</label>
-      <div class="layui-input-block">
-        <select name="city" lay-verify="required">
-          <option value=""></option>
-          <option value="0">北京</option>
-          <option value="1">上海</option>
-          <option value="2">广州</option>
-          <option value="3">深圳</option>
-          <option value="4">杭州</option>
-        </select>
+        <label class="layui-form-label">管理员姓名</label>
+        <div class="layui-input-block">
+          <input type="text" name="title" required  lay-verify="required" placeholder="请输入管理员姓名" autocomplete="off" class="layui-input">
+        </div> 
       </div>
-    </div>
     <div class="layui-form-item">
-      <label class="layui-form-label">权限</label>
-      <div class="layui-input-block">
-        <input type="checkbox" name="" title="超级权限(1)" lay-skin="primary" checked>
-        <input type="checkbox" name="" title="一般权限(0)" lay-skin="primary"> 
-        <!-- <input type="checkbox" name="" title="禁用" lay-skin="primary" disabled>  -->
-      </div>
-    </div>
-    <div class="layui-form-item">
-      <label class="layui-form-label">禁用</label>
+      <label class="layui-form-label">是否禁用</label>
       <div class="layui-input-block">
         <input type="checkbox" name="switch" lay-skin="switch">
       </div>
     </div>
-    <div class="layui-form-item">
-      <label class="layui-form-label">性别</label>
-      <div class="layui-input-block">
-        <input type="radio" name="sex" value="男" title="男">
-        <input type="radio" name="sex" value="女" title="女" checked>
-      </div>
-    </div>
+
     <div class="layui-form-item">
       <div class="layui-input-block">
         <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
@@ -144,20 +126,6 @@
             <input type="text" name="title" required  lay-verify="required" placeholder="请输入管理员账号" autocomplete="off" class="layui-input">
           </div> 
         </div>
-      
-      <div class="layui-form-item">
-        <label class="layui-form-label">选择框</label>
-        <div class="layui-input-block">
-          <select name="city" lay-verify="required">
-            <option value=""></option>
-            <option value="0">北京</option>
-            <option value="1">上海</option>
-            <option value="2">广州</option>
-            <option value="3">深圳</option>
-            <option value="4">杭州</option>
-          </select>
-        </div>
-      </div>
       <div class="layui-form-item">
         <label class="layui-form-label">权限</label>
         <div class="layui-input-block">
@@ -167,7 +135,7 @@
         </div>
       </div>
       <div class="layui-form-item">
-        <label class="layui-form-label">禁用</label>
+        <label class="layui-form-label">是否禁用</label>
         <div class="layui-input-block">
           <input type="checkbox" name="switch" lay-skin="switch">
         </div>
