--- a/application/admin/view/admins/admins.html
+++ b/application/admin/view/admins/admins.html
@@ -69,17 +69,17 @@
 
 </body>
 <div id="admin-panel-add" style="width:400px;display: none">
-  <form class="layui-form" action="/admin/admins/add_admin" style="margin-top:20px;">
+  <form class="layui-form" action="" style="margin-top:20px;">
     <div class="layui-form-item">
       <label class="layui-form-label">管理员账号</label>
       <div class="layui-input-block">
-        <input type="text" name="title" required  lay-verify="required" placeholder="请输入管理员账号" autocomplete="off" class="layui-input">
+        <input type="text" name="username" required  lay-verify="required" placeholder="请输入管理员账号" autocomplete="off" class="layui-input">
       </div> 
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">管理员密码</label>
         <div class="layui-input-block">
-          <input type="text" name="title" required  lay-verify="required" placeholder="请输入管理员密码" autocomplete="off" class="layui-input">
+          <input type="text" name="password" required  lay-verify="required" placeholder="请输入管理员密码" autocomplete="off" class="layui-input">
         </div> 
       </div>
       <div class="layui-form-item">
@@ -92,13 +92,13 @@
     <div class="layui-form-item">
         <label class="layui-form-label">管理员姓名</label>
         <div class="layui-input-block">
-          <input type="text" name="title" required  lay-verify="required" placeholder="请输入管理员姓名" autocomplete="off" class="layui-input">
+          <input type="text" name="truename" required  lay-verify="required" placeholder="请输入管理员姓名" autocomplete="off" class="layui-input">
         </div> 
       </div>
     <div class="layui-form-item">
       <label class="layui-form-label">是否禁用</label>
       <div class="layui-input-block">
-        <input type="checkbox" name="switch" lay-skin="switch">
+        <input type="checkbox" name="status" lay-skin="switch">
       </div>
     </div>
 
@@ -141,9 +141,12 @@
     layer = layui.layer;
     var form = layui.form;
     form.on('submit(formDemo)', function (data) {  //确定提交获取form中提交的值
-      layer.msg(JSON.stringify(data.field));  //获取值
-      layer.closeAll();
-      return false;
+      //layer.msg(JSON.stringify(data.field));  //获取值
+      var userInfo = data.field;
+      userInfo['status'] = userInfo['status']=='on'?0:1;
+      $.post('/admin/admins/addAdmin',userInfo,function(res){
+        console.log(12312312)
+      });
     });
   });
 
@@ -157,13 +160,14 @@
   }
 
   function edit_admins(obj){
-    console.log('asd');
     if($($(obj).parent().prevAll()[2]).text()=='正常'){
-        $('.userInfo-status').attr('checked',true);
-        $('.userInfo-status').next().attr('class','layui-unselect layui-form-switch layui-form-onswitch');
-    }else{
       $('.userInfo-status').attr('checked',false);
       $('.userInfo-status').next().attr('class','layui-unselect layui-form-switch');
+    }else{
+      $('.userInfo-status').attr('checked',true);
+        $('.userInfo-status').next().attr('class','layui-unselect layui-form-switch layui-form-onswitch');
+
+     
     }
     layer.open({
       title: '编辑管理员',
